Created external css files under css directory

--- a/ericAbout.html
+++ b/ericAbout.html
@@ -2,85 +2,8 @@
 <html>
     <head>
         <title>About Eric</title>
+        <link rel="stylesheet" href="css/ericAbout.css">
     </head>
-    <style>
-        body{
-            font:arial;
-        }
-        h1{
-            color:red;
-            font-size:60px;
-        }
-        #main{
-            transition: margin-left .5s;
-            padding: 16px;
-        }
-        #aside{
-            height: 100%;
-            width: 0;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color: black;
-            overflow-x: hidden;
-            transition: 0.5s;
-            padding-top: 60px;
-        }
-        #aside a{
-            font-size:50px;
-            width:100%;
-            display: block;
-            color: white;
-            padding: 16px;
-            text-decoration: none;
-            transition:0.3s;
-
-        }
-        #aside a:hover {
-            background-color:lightgreen;
-            color: white;
-        }
-        #about{
-            background-color:gray;
-        }
-        #here{
-            background-color:lightgreen;
-        }
-        .label{
-            color:white;
-            margin-left:30%;
-            font-size:30px;
-            padding:5px;
-        }
-        hr{
-            border:solid white;
-        }
-        #main .openbtn {
-            color:grey;
-            font-size: 30px;
-            background-color:black;
-            padding: 10px 15px;
-        }
-        #main .openbtn:hover {
-            color:white;
-            cursor:grab;
-        }
-        #aside .closebtn {
-            position: absolute;
-            background-color:black;
-            color:grey;
-            top: 0;
-            right: 0px;
-            border:none;
-            font-size: 36px;
-            margin-right:0px;
-        }
-        #aside .closebtn:hover{
-            color:white;
-            cursor:grab;
-        }
-    </style>
     <body>
         <div id="main">
             <!-- <button class="openbtn" onclick="openSideBar()">&#9776; Menu</button> -->
