--- a/eric.html
+++ b/eric.html
@@ -2,92 +2,8 @@
     <html>
         <head>
             <title>ERIC</title>
-            <style>
-                h1{
-                    color:red;
-                    font:stencil;
-                    font-size:250px;
-                }
-                img{
-                    width:650px;
-                }
-                td{
-                    padding:1px;
-                    border:1px;
-                }
-                body{
-                    margin:0;
-                }
-                #main{
-                    transition: margin-left .5s;
-                    padding: 16px;
-                }
-                #aside{
-                    height: 100%;
-                    width: 0;
-                    position: fixed;
-                    z-index: 1;
-                    top: 0;
-                    left: 0;
-                    background-color: black;
-                    overflow-x: hidden;
-                    transition: 0.5s;
-                    padding-top: 60px;
-                }
-                a{
-                    font-size:50px;
-                    width:100%;
-                    display: block;
-                    color: white;
-                    padding: 16px;
-                    text-decoration: none;
-                    transition:0.3s;
-                }
-                #aside a:hover {
-                    background-color:lightgreen;
-                    color: white;
-                }
-                .socials{
-                    font-size:40px;
-                    width:100%;
-                }
-                #home{
-                    background-color:lightgreen;
-                }
-                .label{
-                    color:white;
-                    margin-left:30%;
-                    font-size:30px;
-                    padding:5px;
-                }
-                hr{
-                    border:solid black;
-                }
-                #main .openbtn {
-                    color:grey;
-                    font-size: 30px;
-                    background-color:black;
-                    padding: 10px 15px;
-                }
-                #main .openbtn:hover {
-                    color:white;
-                    cursor:grab;
-                }
-                #aside .closebtn {
-                    position: absolute;
-                    background-color:black;
-                    color:grey;
-                    top: 0;
-                    right: 0px;
-                    border:none;
-                    font-size: 36px;
-                    margin-right:0px;
-                }
-                #aside .closebtn:hover{
-                    color:white;
-                    cursor:grab;
-                }
-            </style>
+            <link rel="stylesheet" href="css/eric.css">
+            
         </head>
         <body>
             <div id="main">
@@ -100,7 +16,7 @@
                 </table>
             </div>
             <div id="aside">
-                <input type="button" class="closebtn" onclick="closeSideBar()" value="x"/>
+                <input type="button" class="closebtn" onclick="closeSideBar()" value="&#9747"/>
                 <p class="label">Navigation</p>
                 <a href="eric.html" id="home">Home</a>
                 <a href="ericAbout.html">About</a>
