put javascript functions into external files under scripts directory

--- a/ericAbout.html
+++ b/ericAbout.html
@@ -27,17 +27,6 @@
             <a href="https://www.linkedin.com/in/eric-paliotta-7538821b3/">Linkedin</a>
             <a href="https://www.etsy.com/shop/EricPaliottaCeramics">Etsy</a>
         </div>
-        <script>
-            function openSideBar()
-            {
-                document.getElementById("aside").style.width = "300px";
-                document.getElementById("main").style.marginLeft = "300px";
-            }
-            function closeSideBar()
-            {
-                document.getElementById("aside").style.width = "0px";
-                document.getElementById("main").style.marginLeft = "0px";
-            }
-        </script>
+        <script src="scripts/ericAboutScript.js"></script>
     </body>
 </html>
