--- a/eric.html
+++ b/eric.html
@@ -15,6 +15,7 @@
                     </tr>
                 </table>
             </div>
+            <!-- side bar generation -->
             <div id="aside">
                 <input type="button" class="closebtn" onclick="closeSideBar()" value="&#9747"/>
                 <p class="label">Navigation</p>
@@ -30,18 +31,7 @@
                 <a href="https://www.linkedin.com/in/eric-paliotta-7538821b3/">Linkedin</a>
                 <a href="https://www.etsy.com/shop/EricPaliottaCeramics">Etsy</a>
             </div>
-            <script>
-                    function openSideBar()
-                    {
-                        document.getElementById("aside").style.width = "300px";
-                        document.getElementById("main").style.marginLeft = "300px";
-                    }
-                    function closeSideBar()
-                    {
-                        document.getElementById("aside").style.width = "0px";
-                        document.getElementById("main").style.marginLeft = "0px";
-                    }
-            </script>
+            <script src="scripts/ericScript.js"></script>
         </body>
     </html>
 </DOCTYPE>
